deleted lootpower mentions

--- a/games.html
+++ b/games.html
@@ -15,7 +15,7 @@
 	<meta name="keywords" content="games, car games, html5 games, new games, fun games, cool games, play games, best games,
        Skill games, Classic games,  quiz,  skill,  educational,  shooting,  casino,  bubble-shooter,  dress-up,  adventure,  time-management,  Mind games,  sports,  tower-defense,  racing,  animals,  strategy,  arcade,  platform,   board-and-card,  action, ">
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-	<link rel="icon" type="image/png" href="./lootpower.ico" />
+	<link rel="icon" type="image/png" href="./MindsBoom.ico" />
 	<!-- css -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/popup-box.css" rel="stylesheet" type="text/css" media="all" />
@@ -371,7 +371,7 @@
 			<h4>Contact</h4>
 			<ul>
 				<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></li>
-				<li><a href="mailto:example@mail.com"><h6>support@lootpower.com</h6></a></li>
+				<li><a href="mailto:example@mail.com"><h6>support@MindsBoom.com</h6></a></li>
 			</ul>
 			<ul>
 				<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span></li>
@@ -416,7 +416,7 @@
 		</div>
 		<div class="col-md-4 footer-right-ltpwr">
 			<a href="index.html"><img src="./images/nicegamez_logo_w.png" alt=""></a>
-			<p>Lootpower is the ultimate creator and distributor of games designed for grown up players worldwide. </p>
+			<p>MindsBoom is the ultimate creator and distributor of games designed for grown up players worldwide. </p>
 			<p class="agileinfo">Players turn to us for superior games and for reliable source of quality content.</p>
 		</div>
 		<div class="clearfix"></div>
