--- a/signup_safecharge2.html
+++ b/signup_safecharge2.html
@@ -17,7 +17,7 @@
     <meta name="keywords" content="games, car games, html5 games, new games, fun games, cool games, play games, best games,
        Skill games, Classic games,  quiz,  skill,  educational,  shooting,  casino,  bubble-shooter,  dress-up,  adventure,  time-management,  Mind games,  sports,  tower-defense,  racing,  animals,  strategy,  arcade,  platform,   board-and-card,  action, ">
     <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-    <link rel="icon" type="image/png" href="./lootpower.ico" />
+    <link rel="icon" type="image/png" href="./MindsBoom.ico" />
     <!-- css -->
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
@@ -195,7 +195,7 @@
                     </div>
                     <br/><br/>
                     <span class="form-hint">Authentication charge: <b>TOTAL OF 1 EUR</b> (will be refunded back to you)</span>
-                    <span class="form-hint2">The transaction will appear as lootpower.com on your credit card bill</span>
+                    <span class="form-hint2">The transaction will appear as MindsBoom.com on your credit card bill</span>
                     <input class="button" type="submit" value="Pay">
                 </form>
             </div>
@@ -298,7 +298,7 @@
         </div>
         <div class="col-md-4 footer-right-ltpwr">
             <a href="index.html"><img src="./images/nicegamez_logo_w.png" alt=""></a>
-            <p>Lootpower is the ultimate creator and distributor of games designed for grown up players worldwide. </p>
+            <p>MindsBoom is the ultimate creator and distributor of games designed for grown up players worldwide. </p>
             <p class="agileinfo">Players turn to us for superior games and for reliable source of quality content.</p>
         </div>
         <div class="clearfix"></div>
