--- a/refund.html
+++ b/refund.html
@@ -15,7 +15,7 @@
     <meta name="keywords" content="games, car games, html5 games, new games, fun games, cool games, play games, best games,
        Skill games, Classic games,  quiz,  skill,  educational,  shooting,  casino,  bubble-shooter,  dress-up,  adventure,  time-management,  Mind games,  sports,  tower-defense,  racing,  animals,  strategy,  arcade,  platform,   board-and-card,  action, ">
     <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-    <link rel="icon" type="image/png" href="./lootpower.ico" />
+    <link rel="icon" type="image/png" href="./MindsBoom.ico" />
     <!-- css -->
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
@@ -130,10 +130,10 @@
                 <h4>Membership CANCELLATION</h4>
                 <p>By signing up for a subscription or membership to the Website, accessing any the password protected area of the Website, using any "members only" content available in at or through the Website, or by accepting these terms and conditions by any other legally recognizable means, you hereby acknowledge and agree that you will be irrevocably agreeing to all the terms, conditions, obligations, warranties, and other provisions set forth in this Agreement, including the authorization for and acceptance of full financial responsibility for all charges set forth in this Agreement.
                     To terminate your membership, your subscription must be canceled at least 2 days prior to the end of the current term (or within your trial period in the case of trial membership). Certain features are available to upgraded or converted members only.
-                    You agree that if you do not send the Company notice of cancellation of your membership at least TWO (2) DAYS from the expiration of your membership term (including any free or promotional membership terms), or within your trial period in the case of trial membership the Company shall, with the full authorization You hereby provide, automatically and without further notice, renew Your membership to Website. You will receive an email from support@lootpower.com 2 days before the end of your trial period, confirming that, unless cancelled, your membership will renew to the full monthly subscription once the trial period has expired.
+                    You agree that if you do not send the Company notice of cancellation of your membership at least TWO (2) DAYS from the expiration of your membership term (including any free or promotional membership terms), or within your trial period in the case of trial membership the Company shall, with the full authorization You hereby provide, automatically and without further notice, renew Your membership to Website. You will receive an email from support@MindsBoom.com 2 days before the end of your trial period, confirming that, unless cancelled, your membership will renew to the full monthly subscription once the trial period has expired.
                     All cancellations received by the Company at least TWO (2) DAYS from the expiration of your membership will be effective upon receipt and The Company may, at any time and at its sole discretion and without cause or the providing of any reason, cancel any membership.
                     You hereby acknowledge and agree that if You cancel Your membership, or if Your membership is cancelled by the Company, Your password will be removed from the system at the end of the then current membership period and that You will be entitled to receive the full benefits of Your membership until the end of such membership period. You shall not be entitled to any pro-rated or partial refund if You cancel Your membership before the end of the then current membership period for any reason.
-                    In order to cancel your Loot Power membership, please email us at support@lootpower.com.</p>
+                    In order to cancel your Loot Power membership, please email us at support@MindsBoom.com.</p>
             </article>
             <article>
                 <h4>Refunds</h4>
@@ -145,7 +145,7 @@
             </article>
             <article>
                 <h4>Questions?</h4>
-                <p>Please have a look at our FAQ page. Question not there? Please feel free to contact us at support@lootpower.com for further help.</p>
+                <p>Please have a look at our FAQ page. Question not there? Please feel free to contact us at support@MindsBoom.com for further help.</p>
             </article>
         </div>
     </div>
@@ -158,7 +158,7 @@
             <h4>Contact</h4>
             <ul>
                 <li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></li>
-                <li><a href="mailto:example@mail.com"><h6>support@lootpower.com</h6></a></li>
+                <li><a href="mailto:example@mail.com"><h6>support@MindsBoom.com</h6></a></li>
             </ul>
             <ul>
                 <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span></li>
@@ -203,7 +203,7 @@
         </div>
         <div class="col-md-4 footer-right-ltpwr">
             <a href="index.html"><img src="./images/nicegamez_logo_w.png" alt=""></a>
-            <p>Lootpower is the ultimate creator and distributor of games designed for grown up players worldwide. </p>
+            <p>MindsBoom is the ultimate creator and distributor of games designed for grown up players worldwide. </p>
             <p class="agileinfo">Players turn to us for superior games and for reliable source of quality content.</p>
         </div>
         <div class="clearfix"></div>
