--- a/signup2.html
+++ b/signup2.html
@@ -15,7 +15,7 @@
     <meta name="keywords" content="games, car games, html5 games, new games, fun games, cool games, play games, best games,
        Skill games, Classic games,  quiz,  skill,  educational,  shooting,  casino,  bubble-shooter,  dress-up,  adventure,  time-management,  Mind games,  sports,  tower-defense,  racing,  animals,  strategy,  arcade,  platform,   board-and-card,  action, ">
     <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-    <link rel="icon" type="image/png" href="./lootpower.ico" />
+    <link rel="icon" type="image/png" href="./MindsBoom.ico" />
     <!-- css -->
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
@@ -167,7 +167,7 @@
                     <span><input type="text" id="cvv2" name="cvv2" placeholder="CVV2" required=""><span class="glyphicon glyphicon-question-sign"><div class="cardTip tipRight"><img
                             src="./images/cardTip3.jpg" alt=""></div></span></span>
                     <span class="form-hint">Authentication charge: <b>TOTAL OF 1 EUR</b> (will be refunded back to you)</span>
-                    <span class="form-hint2">The transaction will appear as lootpower.com on your credit card bill</span>
+                    <span class="form-hint2">The transaction will appear as MindsBoom.com on your credit card bill</span>
                 <input class="button" type="submit" value="Pay">
             </form>
             </div>
@@ -225,7 +225,7 @@
             <h4>Contact</h4>
             <ul>
                 <li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></li>
-                <li><a href="mailto:example@mail.com"><h6>support@lootpower.com</h6></a></li>
+                <li><a href="mailto:example@mail.com"><h6>support@MindsBoom.com</h6></a></li>
             </ul>
             <ul>
                 <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span></li>
@@ -270,7 +270,7 @@
         </div>
         <div class="col-md-4 footer-right-ltpwr">
             <a href="index.html"><img src="./images/nicegamez_logo_w.png" alt=""></a>
-            <p>Lootpower is the ultimate creator and distributor of games designed for grown up players worldwide. </p>
+            <p>MindsBoom is the ultimate creator and distributor of games designed for grown up players worldwide. </p>
             <p class="agileinfo">Players turn to us for superior games and for reliable source of quality content.</p>
         </div>
         <div class="clearfix"></div>
