--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Nicegamez</title>
+<title>MindsBoom</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<!-- Google Tag Manager -->
@@ -45,7 +45,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a  href="index.html"><img src="./images/nicegamez_logo_w.png" alt=""></a>
+					<a  href="index.html"><img src="./images/MindsBoom_logo_w.png" alt=""></a>
 				</div>
 
 				<div id="navbar" class="navbar-collapse collapse">
@@ -484,7 +484,7 @@
 			<div class="clearfix"></div>
 		</div>
 		<div class="col-md-4 footer-right-ltpwr">
-			<a href="index.html"><img src="./images/nicegamez_logo_w.png" alt=""></a>
+			<a href="index.html"><img src="./images/MindsBoom_logo_w.png" alt=""></a>
 			<p>MindsBoom is the ultimate creator and distributor of games designed for grown up players worldwide. </p>
 			<p class="agileinfo">Players turn to us for superior games and for reliable source of quality content.</p>
 		</div>
